force-app/main/default/objects/smagicinteract__Consent__c/smagicinteract__Consent__c.object-meta.xml
<CustomObject>
    <label>Consent</label>
    <nameField>
        <label>Phone Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>