force-app/main/default/objects/smagicinteract__Consent__c/fields/case__c.field-meta.xml
<CustomField>
    <fullName>case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>consents</relationshipName>
    <type>Lookup</type>
</CustomField>