force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Account__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>