force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Channel__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>smagicinteract__Channel_Master__c</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>