force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Comment__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Comment__c</fullName>
    <label>Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>