force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Confirmation_Config__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Confirmation_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmation Config</label>
    <referenceTo>smagicinteract__Confirmation_Config__c</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>