force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Confirmation_Message__c</fullName>
    <label>Confirmation Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>