force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Confirmation_SenderId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Confirmation_SenderId__c</fullName>
    <label>Confirmation SenderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>