force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Content_Type__c</fullName>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>