force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Double_Opt_in_Keyword__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Double_Opt_in_Keyword__c</fullName>
    <label>Double Opt-in Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>