force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Double_Opt_in_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Double_Opt_in_Message__c</fullName>
    <label>Double Opt-in Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>