force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Error_Message__c</fullName>
    <description>Stores the error message occurred while subscribing consent with provider</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>