force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__External_Key__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__External_Key__c</fullName>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>