force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Incoming_SMS__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Incoming_SMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incoming SMS</label>
    <referenceTo>smagicinteract__Incoming_SMS__c</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>