force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the consent is deleted or Not</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>