force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Lead__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>