force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Provider_Status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Provider_Status__c</fullName>
    <label>Provider Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>OptIn Registered</fullName>
            </value>
            <value>
                <fullName>OptOut Registered</fullName>
            </value>
            <value>
                <fullName>OptIn Error</fullName>
            </value>
            <value>
                <fullName>OptOut Error</fullName>
            </value>
            <value>
                <fullName>OptIn Submitted</fullName>
            </value>
            <value>
                <fullName>OptOut Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>