force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Send_Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Send_Confirmation_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Confirmation Message</label>
    <type>Checkbox</type>
</CustomField>