force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__SenderId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SenderId__c</fullName>
    <label>SenderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>