force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__SMS_History__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS History</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>