force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Source__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming SMS</fullName>
            </value>
            <value>
                <fullName>Non-Handset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>