force-app/main/default/objects/smagicinteract__Consent__c/fields/smagicinteract__Trigger_Double_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Trigger_Double_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Double Opt-In</label>
    <type>Checkbox</type>
</CustomField>